# observability-example-docker

./: .gitmodules  Dockerfile  Makefile  README.md
build-otel/: Dockerfile  build.sh
build-otel-patch/: Dockerfile
examples/roll-dice-simple/: main.cpp
examples/roll-dice-simple-with-log/: CMakeLists.txt  main.cpp
examples/roll-dice-spdlog/: CMakeLists.txt  main.cpp
examples/roll-dice-trace-grpc/: CMakeLists.txt  log.hpp  main.cpp
examples/roll-dice-trace-grpc-pretty/: CMakeLists.txt  main.cpp
examples/roll-dice-trace-grpc-with-log/: CMakeLists.txt  main.cpp
examples/roll-dice-trace-grpc-with-log-and-metrics/: main.cpp
